--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,18 @@
+body{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+}
 .container{
 width:1280px;
 margin: 0 auto;
-position: relative;
 }
-.header{
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
+.logo{
 font-size: 80px;
 color: #000000;
 padding-top: 61px;
 }
-.header_2{
+.span_logo{
 color: lightskyblue;
 }
 .navigation{
@@ -24,13 +25,9 @@ margin-top: 38px;
 display: flex;
 justify-content: center;
 }
-a{
-text-decoration: none;
-}
 .nav_link{
 padding: 26px 36px 19px;
 color: white;
-font-family: Roboto;
 padding-top: 26px;
 padding-bottom: 19px;
 padding-left:33px;
@@ -54,19 +51,14 @@ flex-direction: column;
 justify-content: center;
 }
 .column_link{
-padding-top: 27px;
-padding-bottom: 27px;
+padding-top: 26px;
+padding-bottom: 26px;
 padding-left: 44px;
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
 font-size: 27px;
 line-height: 27px;
-display: flex;
 color: #485863;
 }
 .column_link:hover{
-display: block;
 background: #DBDBDB;
 }
 .flex-container{
@@ -82,7 +74,7 @@ align-items: center;
 justify-content: center;
 display: flex;
 }
-.picture:hover{
+.img_hover:hover{
 -webkit-transform: scale(1.1);
 -moz-transform: scale(2.1);
 -o-transform: scale(5.1);
@@ -91,18 +83,15 @@ transition: transform 1s;
 
 .text{
 margin-top: 37px;
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
 width: 885px;
 font-size: 18px;
 line-height: 24px;
 color: #2C2C2C;
 }
-.text_1{
+.text_first{
 padding-bottom: 34px;
 }
-.text_2{
+.text_added{
 padding-bottom: 54px;
 }
 .navigation_down{
@@ -119,9 +108,6 @@ display: flex;
 align-items: center;
 justify-content: space-evenly;
 color: black;
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
 font-size: 28px;
 padding-left: 40px;
 height: 69px;
@@ -135,9 +121,6 @@ display: flex;
 align-items: center;
 justify-content: flex-end;
 color: black;
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
 font-size: 24px;
 padding-left: 250px;
 }
